--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       name="description"
       content="The Guardian News é uma pagina de notícias."
     />
+    <meta property="og:image" content="www.noticias-rho.vercel.app/Desktop.png">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
